<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


    <TextView
        android:id="@+id/totalSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/gapMedium"
        android:textColor="@color/text_blue"
        android:text="16.0217"
        android:textSize="@dimen/textSizeXXLarge"
        android:visibility="invisible"
        android:fontFamily="sans-serif-thin"/>

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/chart_gray"
        android:text="@string/steps"
        android:textSize="@dimen/textSizeLarge"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/negativeMarginXLarge"
        android:fontFamily="sans-serif-thin"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="@dimen/gapLarge"
        android:layout_marginRight="@dimen/gapLarge"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDark"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#22000000" />

        <TextView
            android:id="@+id/donatedSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="@dimen/gapLarge"
            android:text="Has donat 128.481.522 passes" />

        <RelativeLayout
            android:id="@+id/donateButton"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_above="@id/donatedSteps"
            android:layout_centerInParent="true"
            android:background="@drawable/background_circle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="40dp"
                android:src="@drawable/button_feet" />
        </RelativeLayout>
    </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow"/>

    <TextView
        android:id="@+id/fakeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/gapLarge"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/fakeDonateButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/fakeText"
        android:layout_centerInParent="true"
        android:background="@drawable/background_circle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            android:src="@drawable/button_feet" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fakeDonateButton"
        android:layout_centerHorizontal="true"
        android:paddingRight="@dimen/gapXXLarge"
        android:src="@drawable/arrow"/>

    <TextView
        android:id="@+id/textInstructions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_horizontal"
        android:layout_above="@id/arrow"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSizeMedium"
        android:text="@string/premPerDonarLine2"
        />

    <TextView
        android:id="@+id/textInstructions1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:layout_above="@id/textInstructions2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSizeMedium"
        android:text="@string/premPerDonarLine1"
        android:layout_marginBottom="@dimen/negativeMarginSmall"
        />
</RelativeLayout>
